--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
     <canvas id="gameCanvas"></canvas>
+    <script src="FPSCounter.mjs"></script>
     <script src="game.js"></script>
 </body>
 </html>
