Add polygons.mjs script

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
     <canvas id="gameCanvas"></canvas>
     <script src="FPSCounter.mjs"></script>
+    <script src="polygons.mjs"></script>
     <script src="game.js"></script>
 </body>
 </html>
