Refactor game.js and add text.js for displaying text

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
     <canvas id="gameCanvas"></canvas>
+    <script src="text.js"></script>
     <script src="FPSCounter.mjs"></script>
     <script src="polygons.mjs"></script>
     <script src="game.js"></script>
