Add .gitignore and update index.html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
-<!DOCTYPE html>
-<html>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <title>Polygon Peril</title>
+</head>
+
+<head></head>
+
 <body>
     <canvas id="gameCanvas"></canvas>
     <script src="text.js"></script>
     <script src="FPSCounter.mjs"></script>
     <script src="polygons.mjs"></script>
     <script src="game.js"></script>
+
 </body>
+
 </html>
