Small fixes: - disable fullscreen - move style to css - draw messages last (so rectangle will not obscure them)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <body>
     <canvas id="gameCanvas"></canvas>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script src="text.js"></script>
     <script src="FPSCounter.mjs"></script>
     <script src="polygons.mjs"></script>
