Add draw.js and update functions for drawing shapes

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <canvas id="gameCanvas"></canvas>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="text.js"></script>
-    <script src="FPSCounter.mjs"></script>
     <script src="polygons.mjs"></script>
+    <script src="FPSCounter.mjs"></script>
+    <script src="draw.js"></script>
     <script src="game.js"></script>
 </body>
 
